2016-01-13
Fixed the arguments to main() in part 1.

2016-01-12
Created part 1 and tested it.  There's not much else to say.